--- a/common/common.scss
+++ b/common/common.scss
@@ -359,6 +359,7 @@ sup {
   font-size: 13px;
   font-weight: normal;
   line-height: 1;
+  margin-right: 4px;
 }
 .badge-wrapper[href]:focus, .badge-wrapper[href]:hover {
   -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
