--- a/common/common.scss
+++ b/common/common.scss
@@ -3681,6 +3681,26 @@ nav.post-controls .actions button .read-icon::before {
     color: $tertiary;
   }
 }
+#reply-control .contents .submit-panel .fa {
+  font-family: 'Material Icons';
+  -webkit-font-feature-settings: 'liga';
+          font-feature-settings: 'liga';
+  font-size: 1.714286em;
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: normal;
+  line-height: 0.583333em;
+  text-rendering: optimizeLegibility;
+  text-transform: none;
+  vertical-align: -0.302198em;
+  white-space: nowrap;
+  word-wrap: normal;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+#reply-control .contents .submit-panel .fa-plus::before {
+  content: 'add';
+}
 #reply-control .control-row {
   display: -webkit-box;
   display: -webkit-flex;
@@ -3926,6 +3946,9 @@ nav.post-controls .actions button .read-icon::before {
 #reply-control .hide-preview #draft-status {
   right: 0;
 }
+#reply-control .hide-preview .toggle-preview::before {
+  content: 'keyboard_arrow_left';
+}
 #reply-control .popup-menu {
   font-size: 13px;
   line-height: 1.5;
@@ -4083,6 +4106,8 @@ nav.post-controls .actions button .read-icon::before {
   position: absolute;
   right: 16px;
   bottom: 16px;
+  text-indent: 100%;
+  width: 56px;
 }
 #reply-control .toggle-preview:focus {
   background-color: color-chooser(rgba(204, 204, 204, 0.125), rgba(153, 153, 153, 0.2));
@@ -4137,6 +4162,42 @@ nav.post-controls .actions button .read-icon::before {
   #reply-control .toggle-preview.btn-primary:hover {
     color: $tertiary;
   }
+}
+#reply-control .toggle-preview::before {
+  font-family: 'Material Icons';
+  -webkit-font-feature-settings: 'liga';
+          font-feature-settings: 'liga';
+  font-size: 1.714286em;
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: normal;
+  line-height: 0.583333em;
+  text-rendering: optimizeLegibility;
+  text-transform: none;
+  vertical-align: -0.302198em;
+  white-space: nowrap;
+  word-wrap: normal;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  content: 'keyboard_arrow_right';
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-indent: 0;
 }
 #reply-control .wmd-controls {
   display: -webkit-box;
