--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -142,6 +142,14 @@
 
         margin-left: $card-inner-spacer-x;
       }
+
+      .fa {
+        @include material-icons;
+      }
+
+      .fa-plus::before {
+        content: 'add';
+      }
     }
   }
 
@@ -282,6 +290,10 @@
     #draft-status {
       right: 0;
     }
+
+    .toggle-preview::before {
+      content: 'keyboard_arrow_left';
+    }
   }
 
   .popup-menu {
@@ -374,6 +386,23 @@
     position: absolute;
     right: $card-padding-x;
     bottom: $card-padding-y;
+    text-indent: 100%;
+    width: ($btn-padding-x * 2 + $material-icon-size);
+
+    &::before {
+      @include material-icons;
+
+      align-items: center;
+      content: 'keyboard_arrow_right';
+      display: flex;
+      justify-content: center;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      text-indent: 0;
+    }
   }
 
   .wmd-controls {
