--- a/common/common.scss
+++ b/common/common.scss
@@ -465,6 +465,14 @@ pre code {
   padding: 0;
 }
 
+.code-highlight .bd-clipboard {
+  background-color: color-chooser(#212121, #f5f5f5);
+  border-radius: 2px 2px 0 0;
+}
+.code-highlight .bd-clipboard + pre {
+  border-radius: 0 0 2px 2px;
+}
+
 .hljs {
   color: $primary;
   padding: 16px 16px;
