--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -208,6 +208,8 @@ $card-bg-light:         $light-4 !default;
 $card-border-radius:    2px !default;
 $card-box-shadow:       $shadow-2dp !default;
 $card-box-shadow-hover: $shadow-8dp !default;
+$card-child-bg-dark:    $dark-2 !default;
+$card-child-bg-light:   $light-2 !default;
 $card-color:            unquote('$primary') !default;
 $card-inner-spacer-x:   $spacer-sm !default;
 $card-inner-spacer-y:   $spacer !default;
