--- a/scss/common/_base.scss
+++ b/scss/common/_base.scss
@@ -55,7 +55,7 @@ strong {
 blockquote {
   @include typography-h5;
 
-  background-color: color-chooser($dark-2, $light-2);
+  background-color: color-chooser($card-child-bg-dark, $card-child-bg-light);
   border-left: 0;
   border-radius: $card-border-radius;
   margin: 0 0 $spacer;
@@ -141,13 +141,11 @@ ol,
 ul {
   margin-top: 0;
   margin-bottom: $spacer;
-}
 
-ol ol,
-ol ul,
-ul ol,
-ul ul {
-  margin-bottom: 0;
+  ol,
+  ul {
+    margin-bottom: 0;
+  }
 }
 
 p {
