--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -150,6 +150,10 @@
       .fa-plus::before {
         content: 'add';
       }
+
+      .fa-reply::before {
+        content: 'reply';
+      }
     }
   }
 
